[tool.poetry]
name = "dask-rasterio"
version = "0.2.1"
description = "Read and write rasters in parallel using Rasterio and Dask"
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://github.com/dymaxionlabs/dask-rasterio"
repository = "https://github.com/dymaxionlabs/dask-rasterio"
authors = ["Damián Silvani <munshkr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3"
dask = "^0.17.5"
rasterio = {version = "^1.0b1", allows-prereleases = true}
toolz = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^1.9"
coverage = "^4.5"
